--- a/grid.css
+++ b/grid.css
@@ -37,6 +37,7 @@ body {
 .noice-stuff {
   margin-top: -2vw;
   text-alignt: center;
+  color:#C2ECE5;
   font-size: 2vw;
   font-weight: bold;
   text-align: center;
