--- a/grid.css
+++ b/grid.css
@@ -1,8 +1,9 @@
 .themed-grid-col {
   padding-top: 15px;
   padding-bottom: 15px;
-  background-color: rgba(169, 194, 131, .15);
+  background-color: SALMON;
   border: 1px solid rgba(169, 194, 131, .2);
+  text-align: center;
 }
 
 .themed-container {
@@ -14,7 +15,34 @@
 a:hover {
   color: white;
 }
+.slider {  -webkit-appearance: none;
+  width: 100%;
+  height: 25px;
+  background: WHITE;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+.slider:hover {
+  opacity: 1;
+}
 
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 5px;
+  height: 25px;
+  background: BLACK;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: YELLOW;
+  cursor: pointer;
+}
 body {
   background-color: black;
 }
