--- a/grid.css
+++ b/grid.css
@@ -11,6 +11,9 @@
   font-family: Inter;
   opacity: 0.8;
 }
+.img-p {
+max-height: 20vh;
+}
 .okiii {
   background-color: rgba(255, 255, 255, 0.2);
   padding: 0.2em;
